name:                radio
version:             0.1.0.0
-- synopsis:            
description:         
license:             BSD3
license-file:        LICENSE
-- author:              
-- maintainer:          
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.8

executable radio
  main-is: Main.hs        
  -- other-modules:       
  build-depends:       base ==4.5.*, basic-prelude ==0.3.*, bytestring ==0.9.*, containers ==0.4.*, network ==2.4.*, io-streams ==1.0.*, mtl ==2.1.*, snap-server ==0.9.*, unix ==2.5.*, blaze-builder ==0.3.*, attoparsec ==0.10.*, aeson ==0.6.*, snap-core ==0.9.*, binary ==0.5.*, data-cycle ==0.1.*, collections-api ==1.0.*
  hs-source-dirs:      src
