name:                radio
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
-- author:              
-- maintainer:          
-- copyright:           
category:            Sound
build-type:          Simple
cabal-version:       >=1.8

executable radio
  main-is: Main.hs          
  -- other-modules:       
  build-depends:       base ==4.5.*, bytestring ==0.9.*, containers ==0.4.*, network ==2.4.*, mtl ==2.1.*, binary ==0.5.*, text ==0.11.*, snap-server ==0.9.3.*, blaze-builder ==0.3.1.*, collections-api ==1.0.0.*, data-cycle ==0.1.*, snap-core ==0.9.3.*, io-streams ==1.0.1.*, attoparsec ==0.10.4.*, aeson ==0.6.1.*, basic-prelude ==0.3.4.*
  hs-source-dirs:      src
